# slobo-bot

./: .flake8  docker-compose.yaml  pyproject.toml  t.py
bot_service/: Dockerfile
bot_service/config/: .env.example  constants.py  settings.py
bot_service/config/jsons/: constants.json
bot_service/src/: app.py
bot_service/src/api/: __init__.py
bot_service/src/handlers/: __init__.py  popular_meme.py  profile.py
bot_service/src/keyboards/: add_meme.py  inline_builder.py  popular_meme.py  profile.py  start.py
bot_service/src/states/: profile.py
bot_service/src/templates/: add_meme.jinja2  meme_loaded.jinja2  start.jinja2
bot_service/src/utils/: dot_dict.py  json_storage.py  public_basket_utils.py
config/: constants.py
db/: Dockerfile  alembic.ini  models.py  pyproject.toml  recive_msg.py  send_msg.py
db/alembic/: env.py
db/alembic/versions/: 27a11fbf5416_create_users_memes_and_baskets_tables.py
db/config/: .env.example  settings.py
src/handlers/: __init__.py  add_meme.py  profile.py  random_meme.py  start.py
src/keyboards/: profile.py  random_meme.py
src/states/: add_meme.py  public_busket.py
src/templates/: no_photo.jinja2  popular_meme.jinja2  profile.jinja2  random_meme.jinja2
